--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!-- Cucharacha, julio de 2020-->
 <!DOCTYPE html>
-<html lang="es">
+<html>
 	<head>
-		<meta charset="UTF-8"/>
-		<link rel="shortcut icon" href="icono.ico"/> 
+		<link href="icono.ico"/>
 		<title>Cucharachaa</title>
+		<style type="text/css">
+			#cucha{
+				text-align: center;	}
+		</style>
 	</head>
 	<body bgcolor="#B280FF">
-		<h1>Acaria a la monita de anime</h1>
-		<input type="button" id="pet" value="Acariciar"> 
-		<input type="button" id="stop" value="Dejar de acariciar"/> <br/>	
-		<img src="monita.png" id="monita" width="200" height="200" />
+		<section id="cucha">
 
-		<script src="pet.js"></script>
+			<h1 class="centro">Acaria a la monita de anime</h1>
+			<audio src="cuchicuchi.mp3" id="cuchicuchi">Tu explorador no soporta audio :(</audio>
+			<input type="button" id="pet" value="Acariciar">
+			<input type="button" id="stop" value="Dejar de acariciar"/><br/>
+			<img src="monita.png" id="monita" width="250" height="250" />
+
+			<script src="pet.js"></script>
+		</section>
 	</body>
 </html>
