--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<section id="cucha">
 
 			<h1 class="centro">Acaria a la monita de anime</h1>
-			<audio src="cuchicuchi.mp3" id="cuchicuchi">Tu explorador no soporta audio :(</audio>
+			<audio loop src="cuchicuchi.mp3" id="cuchicuchi">Tu explorador no soporta audio :(</audio>
 			<input type="button" id="pet" value="Acariciar">
 			<input type="button" id="stop" value="Dejar de acariciar"/><br/>
 			<img src="monita.png" id="monita" width="250" height="250" />
