--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="icono.ico"/>
 		<title>Cucharachaa</title>
 		<style type="text/css">
 			#cucha{
 				text-align: center;	}
+			body{
+				background: linear-gradient(154deg, rgba(150, 16, 227, 0.80), rgba(148, 60, 199, 0.55));
+				background-size: cover;
+				background-attachment: fixed;
+			}
 		</style>
 	</head>
 	<body bgcolor="#B280FF">
 		<section id="cucha">
 
-			<h1 class="centro">Acaria a la monita de anime</h1>
+			<h1>Acaria a la monita de anime</h1>
 			<audio loop src="cuchicuchi.mp3" id="cuchicuchi">Tu explorador no soporta audio :(</audio>
-			<input type="button" id="pet" value="Acariciar">
+			<input type="button" id="pet" value="Acariciar" onClick="suma();">
 			<input type="button" id="stop" value="Dejar de acariciar"/><br/>
-			<img src="monita.png" id="monita" width="250" height="250" />
-
-			<script src="pet.js"></script>
+			<br/>
+			<img src="monita.png" id="monita" width="250" height="250" /><br/>
+			<h2>Veces acariciada: </h2>
+			<div id= "contando" >--</div>
 		</section>
 	</body>
+		<script src="pet.js"></script>
 </html>
