--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
 			<h1>Acaria a la monita de anime</h1>
 			<audio loop src="cuchicuchi.mp3" id="cuchicuchi">Tu explorador no soporta audio :(</audio>
+			<img src="monita.png" id="monita" width="250" height="250" /><br/><br/>
 			<input type="button" id="pet" value="Acariciar" onClick="suma();">
 			<input type="button" id="stop" value="Dejar de acariciar"/><br/>
 			<br/>
-			<img src="monita.png" id="monita" width="250" height="250" /><br/>
+
 			<h2>Veces acariciada: </h2>
 			<div id= "contando" >--</div>
 		</section>
