--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			#cucha{
 				text-align: center;	}
 			body{
-				background: linear-gradient(154deg, rgba(150, 16, 227, 0.80), rgba(148, 60, 199, 0.55));
+			  background: linear-gradient(to top, #ff00cc, #333399);
 				background-size: cover;
 				background-attachment: fixed;
 			}
@@ -17,14 +17,15 @@
 		<section id="cucha">
 
 			<h1>Acaria a la monita de anime</h1>
-			<audio loop src="cuchicuchi.mp3" id="cuchicuchi">Tu explorador no soporta audio :(</audio>
-			<img src="monita.png" id="monita" width="250" height="250" /><br/><br/>
+			<audio loop src="cuchi.mp3" id="cuchicuchi">Tu explorador no soporta audio :(</audio>
+			<img src="monita.png" id="monita" width="250" height="250" /><br/>
 			<input type="button" id="pet" value="Acariciar" onClick="suma();">
 			<input type="button" id="stop" value="Dejar de acariciar"/><br/>
 			<br/>
 
 			<h2>Veces acariciada: </h2>
-			<div id= "contando" >--</div>
+			<div id= "contando" >--</div><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+			<h3>Para eli espero te guste <3</h3>
 		</section>
 	</body>
 		<script src="pet.js"></script>
