--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			<h2>Veces acariciada: </h2>
 			<div id= "contando" >--</div><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-			<h3>Para eli espero te guste <3</h3>
+			<h3>Para eli espero te guste <3 08/09/2020</h3>
 		</section>
 	</body>
 		<script src="pet.js"></script>
